--- a/App.Web/Views/Shared/_LayoutPartial.cshtml
+++ b/App.Web/Views/Shared/_LayoutPartial.cshtml
@@ -50,16 +50,16 @@
                                         <div class="msg">
                                             <img src="~/Content/img/icons2/world.png" class="utopia-icons2-medium-img" title="world" />
                                             <a href="~/Main/WorldMap" style="padding-left:10px;">
-                                                World COVID-19 Status <small class="muted">(developed by Johns Hopkins University)</small>
+                                                World COVID-19 Status <small class="muted">(developed by JHU)</small>
                                             </a>
                                         </div>
                                     </li>
 
                                     <li>
                                         <div class="msg">
-                                            <img src="~/Content/img/icons2/world.png" class="utopia-icons2-medium-img" title="world" />
+                                            <img src="~/Content/img/icons2/bd.png" class="utopia-icons2-medium-img" title="world" />
                                             <a href="~/MapSummary" style="padding-left:10px;">
-                                                BD COVID-19 Status <small class="muted">(developed by Johns Hopkins University)</small>
+                                                District Status <small class="muted">(based on brac data)</small>
                                             </a>
                                         </div>
                                     </li>
