--- a/App.Web/Views/Main/Index.cshtml
+++ b/App.Web/Views/Main/Index.cshtml
@@ -17,11 +17,12 @@
     </div>
 </div>
 <p>
-    <img src="~/Content/img/icons2/earphones.png" class="utopia-icons2-medium-img" title="Call to Doctor" style="margin-right:10px;" />
-    Call to Doctor <span style="font-size:22px; font-weight:bold"> 0 1 8 3 3 3 0 1 4 1 1 </span> open for 24 x 7
+    <img src="~/Content/img/icons2/phone.png" class="utopia-icons2-medium-img" title="Call to Doctor" style="margin-right:10px;" />
+    Call to BRAC Doctor <span class="textPrimary" style="font-size:22px; font-weight:bold"> 0 1 8 3 3 3 0 1 4 1 1 </span> open for 24 x 7
     <br />
-    <small>However, you are encouraged to call between 9 am to 8 pm unless there is any emergency</small>
+    <small style="padding-left:55px;">However, you are encouraged to call between 9 am to 8 pm unless there is any emergency</small>
 </p>
+
 <section id="formElement" class="utopia-widget utopia-form-box section">    
     <div class="row-fluid">
         <div class="tab-pane">
@@ -36,6 +37,12 @@
         </div>
     </div>
 </section>
+
+<p>
+    <strong class="textPrimary">সরকারী তথ্য ও সেবা কেন্দ্রের জরুরি নম্বর সমূহ</strong>
+    <br />
+    <img src="~/Content/img/icons2/gov.png" title="Call to National health service" />
+</p>
 
 @section scripts{
     <script type="text/javascript">
