--- a/App.Web/Views/Shared/_LayoutPartial.cshtml
+++ b/App.Web/Views/Shared/_LayoutPartial.cshtml
@@ -24,9 +24,9 @@
                                 <ul class="message-list">
                                     <li>
                                         <div class="msg">
-                                            <img src="~/Content/img/icons2/info2.png" class="utopia-icons2-medium-img" title="world" />
+                                            <img src="~/Content/img/icons2/info.png" class="utopia-icons2-medium-img" title="world" />
                                             <a href="~/Main/Dashboard" style="padding-left:10px;">
-                                                Counts <small class="muted">(all counts of the collected data)</small>
+                                                Current Counts <small class="muted">(all counts from the collected data)</small>
                                             </a>
                                         </div>
                                     </li>
@@ -34,15 +34,23 @@
                                         <div class="msg">
                                             <img src="~/Content/img/icons2/stats_pie.png" class="utopia-icons2-medium-img" title="world" />
                                             <a href="~/Analytics" style="padding-left:10px;">
-                                                Chart <small class="muted">(chart view)</small>
+                                                Comparison Chart <small class="muted"> (chart view)</small>
                                             </a>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="msg">
-                                            <img src="~/Content/img/icons2/location.png" class="utopia-icons2-medium-img" title="world" />
+                                            <img src="~/Content/img/icons2/bd.png" class="utopia-icons2-medium-img" title="world" />
+                                            <a href="~/MapSummary" style="padding-left:10px;">
+                                                Demand-Supply Map <small class="muted"> (based on brac & govt data)</small>
+                                            </a>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="msg">
+                                            <img src="~/Content/img/icons2/corona.png" class="utopia-icons2-medium-img" title="world" />
                                             <a href="~/Main/GisMap" style="padding-left:10px;">
-                                                Patients Map <small class="muted">(64 districts and Dhaka in detail)</small>
+                                                Current Infections <small class="muted"> (64 districts and Dhaka in detail)</small>
                                             </a>
                                         </div>
                                     </li>
@@ -50,19 +58,12 @@
                                         <div class="msg">
                                             <img src="~/Content/img/icons2/world.png" class="utopia-icons2-medium-img" title="world" />
                                             <a href="~/Main/WorldMap" style="padding-left:10px;">
-                                                World COVID-19 Status <small class="muted">(developed by JHU)</small>
+                                                World COVID-19 Status <small class="muted"> (developed by JHU)</small>
                                             </a>
                                         </div>
                                     </li>
 
-                                    <li>
-                                        <div class="msg">
-                                            <img src="~/Content/img/icons2/bd.png" class="utopia-icons2-medium-img" title="world" />
-                                            <a href="~/MapSummary" style="padding-left:10px;">
-                                                District Status <small class="muted">(based on brac data)</small>
-                                            </a>
-                                        </div>
-                                    </li>
+
 
                                 </ul>
                                 <div class="message-more"><a href="#"> </a></div>
