--- a/App.Web/Views/Analytics/Index.cshtml
+++ b/App.Web/Views/Analytics/Index.cshtml
@@ -6,6 +6,19 @@
 
 <div class="row-fluid">
     <div class="span12">
+        <ul class="breadcrumb">
+            <li>
+                <h2 class="textPrimary">
+                    Comparison Chart
+                </h2>
+            </li>
+        </ul>
+
+    </div>
+</div>
+
+<div class="row-fluid">
+    <div class="span12">
 
         <section class="utopia-widget">
             <div class="utopia-widget-title">
