--- a/App.Web/Views/Main/GisMap.cshtml
+++ b/App.Web/Views/Main/GisMap.cshtml
@@ -8,7 +8,7 @@
         <ul class="breadcrumb">
             <li>
                 <h2 class="textPrimary">
-                    Patients Map
+                    Current Infections
                 </h2>
             </li>
         </ul>
