--- a/App.Web/Views/Shared/_LayoutPartial.cshtml
+++ b/App.Web/Views/Shared/_LayoutPartial.cshtml
@@ -32,6 +32,14 @@
                                     </li>
                                     <li>
                                         <div class="msg">
+                                            <img src="~/Content/img/icons2/door.png" class="utopia-icons2-medium-img" title="world" />
+                                            <a href="~/Main/BracDashboard" style="padding-left:10px;">
+                                                BRAC Covid-19 Activities <small class="muted">(by all program)</small>
+                                            </a>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="msg">
                                             <img src="~/Content/img/icons2/stats_pie.png" class="utopia-icons2-medium-img" title="world" />
                                             <a href="~/Analytics" style="padding-left:10px;">
                                                 Comparison Chart <small class="muted"> (chart view)</small>
