--- a/App.Web/Views/Main/Dashboard.cshtml
+++ b/App.Web/Views/Main/Dashboard.cshtml
@@ -5,6 +5,9 @@
     string act = "";
 }
 
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
+
 <div class="row-fluid">
 
     <!--Chart Icons -->
@@ -14,7 +17,7 @@
                 <img src="~/content/img/icons2/group.png">
             </div>
             <div class="utopia-chart-heading" id="td2">@Model.Reach</div>
-            <div class="utopia-chart-desc">মোট সাক্ষাত নেয়া হয়েছে</div>
+            <div class="utopia-chart-desc">ব্র্যাক স্টাফ কর্তৃক মোট সাক্ষাত নেয়া হয়েছে</div>
         </div>
     </div>
 
@@ -24,17 +27,17 @@
                 <img src="~/content/img/icons2/emoticon_sleeping.png">
             </div>
             <div class="utopia-chart-heading" id="td1">@Model.Suspect</div>
-            <div class="utopia-chart-desc">সম্ভাব্য রোগীর সংখ্যা</div>
+            <div class="utopia-chart-desc">BRAC SK তথ্য অনুসারে  সম্ভাব্য রোগীর সংখ্যা</div>
         </div>
     </div>
 
     <div class="span3">
         <div class="utopia-chart-legend">
             <div class="utopia-chart-icon">
-                <img src="~/content/img/icons2/user_woman.png">
+                <img src="~/content/img/icons2/burn_dvd.png">
             </div>
-            <div class="utopia-chart-heading" id="td8">@Model.SuspectFemale</div>
-            <div class="utopia-chart-desc">সম্ভাব্য নারী রোগীর সংখ্যা</div>
+            <div class="utopia-chart-heading" id="td8">@Model.DashboardModelBDCs.Patient</div>
+            <div class="utopia-chart-desc">corona.gov.bd হতে প্রাপ্ত রোগীর সংখ্যা </div>
         </div>
     </div>
 
@@ -44,13 +47,12 @@
                 <img src="~/content/img/icons2/game_control.png">
             </div>
             <div class="utopia-chart-heading" id="td11">@Model.SuspectApp</div>
-            <div class="utopia-chart-desc">করোনারোধ App থেকে প্রাপ্ত </div>
+            <div class="utopia-chart-desc">করোনারোধ App থেকে  প্রাপ্ত  সম্ভাব্য রোগীর সংখ্যা</div>
         </div>
     </div>
 
     <!--Chart Icons End -->
 </div>
-
 
 <div class="row-fluid">
 
@@ -66,7 +68,7 @@
 
                         <section class="utopia-widget">
                             <div class="utopia-widget-title">
-                                <img src="~/Content/img/icons/paragraph_justify.png" class="utopia-widget-icon">
+                                <img src="~/Content/img/icons2/bg-gov.png" class="utopia-widget-icon">
                                 <span>সরকারি হিসেবে দেশের সার্বিক অবস্থা</span>
                             </div>
 
@@ -126,7 +128,7 @@
 
                         <section class="utopia-widget">
                             <div class="utopia-widget-title">
-                                <img src="~/Content/img/icons/paragraph_justify.png" class="utopia-widget-icon">
+                                <img src="~/Content/img/icons2/bg-gov.png" class="utopia-widget-icon">
                                 <span>সরকারের সামাজিক নিরাপত্তা তথ্য</span>
                             </div>
 
@@ -175,81 +177,6 @@
                     </div>
                 </div>
 
-                <div class="row-fluid">
-                    <div class="span12">
-                        <div class="row-fluid">
-                            <div class="span6">
-                                <div class="utopia-chart-legend">
-                                    <div class="utopia-chart-sparkline" id="utopia-sparkline-type1"><canvas style="display: inline-block; width: 48px; height: 48px; vertical-align: top;" width="48" height="48"></canvas></div>
-                                    <div class="utopia-chart-heading">চাল </div>
-                                    <div class="utopia-chart-desc"><span style="color:#0000ff">অবশিষ্ট বরাদ্দ</span> ও <span style="color:#ff0000">মোট বিতরণ</span></div>
-                                </div>
-                            </div>
-                            <div class="span6">
-                                <div class="utopia-chart-legend">
-                                    <div class="utopia-chart-sparkline" id="utopia-sparkline-type2"><canvas style="display: inline-block; width: 48px; height: 48px; vertical-align: top;" width="48" height="48"></canvas></div>
-                                    <div class="utopia-chart-heading">নগদ অর্থ</div>
-                                    <div class="utopia-chart-desc"><span style="color:#0000ff">অবশিষ্ট বরাদ্দ</span> ও <span style="color:#ff0000">মোট বিতরণ</span></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row-fluid">
-                    <div class="span12">
-
-                        <section class="utopia-widget">
-                            <div class="utopia-widget-title">
-                                <img src="~/Content/img/icons/paragraph_justify.png" class="utopia-widget-icon">
-                                <span>People Reach By Activity</span>
-                            </div>
-
-                            <div class="utopia-widget-content">
-
-                                <table class="table table-bordered">
-
-                                    <colgroup>
-                                        <col class="utopia-col-0">
-                                        <col class="utopia-col-1">
-                                        <col class="utopia-col-0">
-                                        <col class="utopia-col-1">
-                                        <col class="utopia-col-0">
-                                    </colgroup>
-                                    <thead>
-                                        <tr>
-                                            <th>Activity</th>
-                                            <th>Male</th>
-                                            <th>Female</th>
-                                            <th>Boy</th>
-                                            <th>Girl</th>
-                                            <th>PWD</th>
-                                            <th>HHS</th>
-                                            <th>Pregnant</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        @foreach (var row in Model.BepDataSummeryModelReaches)
-                                        {
-                                            <tr>
-                                                <td>@row.Activity</td>
-                                                <td>@row.Male</td>
-                                                <td>@row.Female</td>
-                                                <td>@row.Boy</td>
-                                                <td>@row.Girl</td>
-                                                <td>@row.PWD</td>
-                                                <td>@row.HHS</td>
-                                                <td>@row.Pregnant</td>
-                                            </tr>
-                                        }
-                                    </tbody>
-                                </table>
-
-                            </div>
-                        </section>
-                    </div>
-                </div>
-
             </div><!-- Mid panel -->
 
             <div class="span6">
@@ -258,65 +185,14 @@
 
                     <div class="span12">
                         <div class="alert alert-block">
-                            <h2>সম্ভাব্য আক্রান্ত শীর্ষ ৫ জেলা</h2>
+                            <h2>আক্রান্ত শীর্ষ ৫ জেলা</h2>
                             <h3 id="td10">@Model.Districts</h3>
                         </div>
                     </div>
 
                 </div>
 
-
-                <div class="row-fluid">
-                    <div class="span12">
-
-                        <section class="utopia-widget">
-                            <div class="utopia-widget-title">
-                                <img src="~/Content/img/icons/paragraph_justify.png" class="utopia-widget-icon">
-                                <span>People Reach by Activities and Distributed Items</span>
-                            </div>
-
-                            <div class="utopia-widget-content">
-
-                                <table class="table table-bordered">
-
-                                    <colgroup>
-                                        <col class="utopia-col-0">
-                                        <col class="utopia-col-1">
-                                        <col class="utopia-col-0">
-                                        <col class="utopia-col-1">
-                                        <col class="utopia-col-0">
-                                    </colgroup>
-                                    <thead>
-                                        <tr>
-                                            <th>Item</th>
-                                            <th>Quantity</th>
-                                            <th>Reach</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        @foreach (var row in Model.BepDataSummeryModelMaterialDistributions)
-                                        {
-                                            if (act != row.Activity)
-                                            {
-                                                <tr>
-                                                    <td colspan="3" class="alert alert-info">@row.Activity</td>
-                                                </tr>
-
-                                                act = row.Activity;
-                                            }
-                                            <tr>
-                                                <td>@row.Item</td>
-                                                <td>@row.Qnt</td>
-                                                <td>@row.Reach</td>
-                                            </tr>
-                                        }
-                                    </tbody>
-                                </table>
-
-                            </div>
-                        </section>
-                    </div>
-                </div>
+                <br />
                 <div class="row-fluid">
                     <div class="span12">
                         <div class="alert alert-success">
@@ -327,7 +203,7 @@
                         </div>
                     </div>
                 </div>
-
+                <br />
                 <div class="row-fluid">
                     <div class="span6">
                         <div class="utopia-chart-legend">
@@ -350,54 +226,28 @@
                     </div>
                 </div>
 
+                <br />
+
                 <div class="row-fluid">
                     <div class="span12">
-
-                        <section class="utopia-widget">
-                            <div class="utopia-widget-title">
-                                <img src="~/Content/img/icons/paragraph_justify.png" class="utopia-widget-icon">
-                                <span>BRAC Prepareness Status</span>
+                        <div class="row-fluid">
+                            <div class="span6">
+                                <div class="utopia-chart-legend">
+                                    <div class="utopia-chart-sparkline" id="utopia-sparkline-type1"><canvas style="display: inline-block; width: 48px; height: 48px; vertical-align: top;" width="48" height="48"></canvas></div>
+                                    <div class="utopia-chart-heading">চাল </div>
+                                    <div class="utopia-chart-desc"><span style="color:#0000ff">অবশিষ্ট বরাদ্দ</span> ও <span style="color:#ff0000">মোট বিতরণ</span></div>
+                                </div>
                             </div>
-
-                            <div class="utopia-widget-content">
-
-                                <table class="table table-bordered">
-
-                                    <colgroup>
-                                        <col class="utopia-col-0">
-                                        <col class="utopia-col-1">
-                                        <col class="utopia-col-0">
-                                        <col class="utopia-col-1">
-                                        <col class="utopia-col-0">
-                                    </colgroup>
-                                    <thead>
-                                        <tr>
-                                            <th>Item</th>
-                                            <th>Quantity</th>
-                                            <th>Distribute</th>
-                                            <th>Male Staff</th>
-                                            <th>Female Staff</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        @foreach (var row in Model.BepDataSummeryModelMaterials)
-                                        {
-                                            <tr>
-                                                <td>@row.Item</td>
-                                                <td>@row.Qnt</td>
-                                                <td>@row.ExpQnt</td>
-                                                <td>@row.Male</td>
-                                                <td>@row.Female</td>
-                                            </tr>
-                                        }
-                                    </tbody>
-                                </table>
-
+                            <div class="span6">
+                                <div class="utopia-chart-legend">
+                                    <div class="utopia-chart-sparkline" id="utopia-sparkline-type2"><canvas style="display: inline-block; width: 48px; height: 48px; vertical-align: top;" width="48" height="48"></canvas></div>
+                                    <div class="utopia-chart-heading">নগদ অর্থ</div>
+                                    <div class="utopia-chart-desc"><span style="color:#0000ff">অবশিষ্ট বরাদ্দ</span> ও <span style="color:#ff0000">মোট বিতরণ</span></div>
+                                </div>
                             </div>
-                        </section>
+                        </div>
                     </div>
                 </div>
-
             </div><!-- Right panel -->
 
         </div>
@@ -410,6 +260,29 @@
 </div>
 
 
+<div class="row-fluid">
+    <div class="span12">
+
+        <section class="utopia-widget">
+            <div class="utopia-widget-title">
+                <img src="~/Content/img/icons2/corona.png" class="utopia-widget-icon">
+                <span>বিগত ১৫ দিনের করোনা রোগীর পরিসংখ্যান </span>
+                <span style="font-size:12px; padding-top:10px;"><a href="~/Main/GisMap" style="padding-left:10px;">view details</a></span>
+            </div>
+
+            <div class="utopia-widget-content">
+
+                <div id="barchart" style="width: 100%; height: 300px;"></div>
+
+            </div>
+            <p>
+                <small style="padding-left:10px;">Source :  করোনা ইনফো</small>
+                <a href="https://corona.gov.bd/" target="_blank" class="pull-right" style="margin-right:20px;"> powered by Ministry of Health & Family Welfare, Government of the People's Republic of Bangladesh</a>
+            </p>
+        </section>
+    </div>
+</div>
+
 <!-- Body end -->
 
 @section scripts{
@@ -417,6 +290,29 @@
     <script type="text/javascript">
         $(document).ready(function () {
 
+            google.charts.load('current', { 'packages': ['corechart'] });
+
+            google.charts.setOnLoadCallback(barChart);
+            function barChart() {
+
+                var jsonData = $.ajax({
+                    url: '@Url.Content("~/Analytics/PatientCountBar")',
+                    dataType: "json",
+                    async: false
+                }).responseText;
+
+                var jdata = JSON.parse(jsonData);
+                var data = google.visualization.arrayToDataTable(jdata);
+
+                var options = {
+                    title: '',
+                    is3D: true,
+                };
+
+                var chart = new google.visualization.ColumnChart(document.getElementById('barchart'));
+
+                chart.draw(data, options);
+            }
 
             $("#utopia-sparkline-type1").sparkline([@(Model.DashboardModelBDCs.PlanRice - Model.DashboardModelBDCs.DisRice), @Model.DashboardModelBDCs.DisRice], { type: "pie", height: 48 });
             $("#utopia-sparkline-type2").sparkline([@(Model.DashboardModelBDCs.PlanMoney-Model.DashboardModelBDCs.DisMoney), @Model.DashboardModelBDCs.DisMoney], { type: "pie", height: 48 });
