--- a/App.Web/Views/Shared/_LayoutMain.cshtml
+++ b/App.Web/Views/Shared/_LayoutMain.cshtml
@@ -51,6 +51,7 @@
                                 <ul class="dropdown">
                                     <li><a class="tables" href="~/DistrictSubmission/Index" title="Comments from district"><span>জেলার মন্তব্য</span></a>
                                     <li><a class="widgets smronju" href="~/DistrictSubmission/IndexReleif" title="District daily update"><span>জেলার প্রতিদিনের তথ্য</span></a></li>
+                                    <li><a class="widgets smronju" href="~/DistrictSubmission/IndexBrac" title="District daily update"><span>ব্র্যাক কর্মীদের তথ্য</span></a></li>
                                     <li><a class="elements" href="~/DistrictSubmission/IndexSum" title="Current status of district"><span>জেলার বর্তমান অবস্থা</span></a></li>
                                 </ul>
                             </li>
