--- a/App.Web/Views/DistrictSubmission/IndexSum.cshtml
+++ b/App.Web/Views/DistrictSubmission/IndexSum.cshtml
@@ -94,7 +94,9 @@
 <table id="gridTable" class="table table-striped table-bordered fixed_headers">
     <thead>
         <tr>
-            <th colspan="9">Covid-19 তথ্য</th>
+            <th colspan="2">এলাকা</th>
+            <th colspan="7">Covid-19 তথ্য</th>
+            <th colspan="3">অন্নান্য রোগীর তথ্য </th>
             <th colspan="3">ব্র্যাক কর্মীর তথ্য</th>
             <th colspan="2">মানবিক সহায়তা বরাদ্দ</th>
             <th colspan="4">মানবিক সহায়তা বিতরণ</th>
@@ -126,6 +128,15 @@
             </th>
             <th>
                 মোট Covid-19 টেস্ট করা হয়েছে
+            </th>
+            <th>
+                অন্যান্য রোগী
+            </th>
+            <th>
+                শ্বাস-কষ্ট সংক্রান্ত রোগী
+            </th>
+            <th>
+                প্রসূতি স্বাস্থ্য সেবা
             </th>
             <th>
                 মোট আক্রান্তের সংখ্যা
