--- a/App.Web/Views/Main/Dashboard.cshtml
+++ b/App.Web/Views/Main/Dashboard.cshtml
@@ -94,7 +94,7 @@
                         <div class="progress-color" style="width: 20%;">
 
                         </div>
-                        <span class="number">0</span>
+                        <span class="number">@Model.DashboardModelBDCs.BracFood</span>
                     </div>
                 </div>
                 <div class="bar cash">
@@ -103,7 +103,7 @@
                         <div class="progress-color" style="width: 50%;">
 
                         </div>
-                        <span class="number">0</span>
+                        <span class="number">@Model.DashboardModelBDCs.BracMoney</span>
                     </div>
                 </div>
             </div>
@@ -416,54 +416,54 @@
                 </div>
                 <div class="img-number-text-item">
                     <img class="sm-34" src="@Url.Content("~/Content/src/images/svg/festoon.svg")" alt="Leaflet">
-                    <strong>0</strong>
+                    <strong>@Model.DashboardModelBracs.Festun</strong>
                     <p>
                         <span>ফেস্টুন</span>
                     </p>
                 </div>
                 <div class="img-number-text-item">
                     <img src="@Url.Content("~/Content/src/images/svg/miking.svg")" alt="Sticker">
-                    <strong>0</strong>
+                    <strong>@Model.DashboardModelBracs.Miking</strong>
                     <p>
                         <span>মাইকিং</span>
                     </p>
                 </div>
             </div>
-            <a href="#" class="view-in-deatils">View in deatils</a>
+            <a href="~/Main/BracDashboard" class="view-in-deatils">View in deatils</a>
         </div>
         <div class="overview-box-wrapper box-shadow">
             <h6 class="header-title text-center">Hygiene Kits and PPE distribution by BRAC</h6>
             <div class="overview-box">
                 <div class="img-number-text-item">
                     <img class="sm-34" src="@Url.Content("~/Content/src/images/svg/sanitizer.svg")" alt="Sanitizer">
-                    <strong>0</strong>
+                    <strong>@Model.DashboardModelBracs.Sanitizer</strong>
                     <p>
                         <span>Sanitizer and hand wash</span>
                     </p>
                 </div>
                 <div class="img-number-text-item">
                     <img class="sm-34" src="@Url.Content("~/Content/src/images/svg/gloves.svg")" alt="Gloves">
-                    <strong>0</strong>
+                    <strong>@Model.DashboardModelBracs.Gloves</strong>
                     <p>
                         <span>Hand gloves</span>
                     </p>
                 </div>
                 <div class="img-number-text-item">
                     <img class="sm-34" src="@Url.Content("~/Content/src/images/svg/surgical-dress.svg")" alt="Surgical Dress">
-                    <strong>0</strong>
+                    <strong>@Model.DashboardModelBracs.Aproan</strong>
                     <p>
                         <span>Surgical Apron</span>
                     </p>
                 </div>
                 <div class="img-number-text-item">
                     <img src="@Url.Content("~/Content/src/images/svg/mask.svg")" alt="Mask">
-                    <strong>0</strong>
+                    <strong>@Model.DashboardModelBracs.Mask</strong>
                     <p>
                         <span>Mask</span>
                     </p>
                 </div>
             </div>
-            <a href="#" class="view-in-deatils">View in deatils</a>
+            <a href="~/Main/BracDashboard" class="view-in-deatils">View in deatils</a>
         </div>
         <div class="report-box box-shadow">
             <h6 class="table-box-title">
